Uploaded image for project: 'Thrift'
  1. Thrift
  2. THRIFT-3629

Parser sets exitcode on errors, but generator does not

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 0.10.0
    • Compiler (General)
    • None
    • Patch Available

    Description

      In main.cc, the parse() function and the generate() function do behave inconsistently w/regard to exceptions being thrown.

      Both functions catch the exception, but ...

      • parse() exits with code 1 and prints the error to stderr
      • generate() only prints the error to stdout and finally exits with code 0

      Proposal is to change generate() similar to the behaviour of parse(). Patch is ready, follows.

      Attachments

        Activity

          People

            jensg Jens Geyer
            jensg Jens Geyer
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: