THRIFT-3629 Parser sets exitcode on errors, but the generator does not Client: Compiler (general) Patch: Jens Geyer

This closes #861